--- a/client/src/App.css
+++ b/client/src/App.css
@@ -182,6 +182,11 @@ img {
   grid-template-columns: 2fr 3fr;
   grid-gap: 2rem;
 }
+.grid-3-2 {
+  display: grid;
+  grid-template-columns: 300px 1fr 1fr;
+  grid-gap: 2rem;
+}
 
 .btn {
   display: inline-block;
@@ -408,7 +413,8 @@ table th {
 
   .grid-2,
   .grid-3,
-  .grid-4 {
+  .grid-4,
+  .grid-3-2 {
     grid-template-columns: 1fr;
   }
 
@@ -439,4 +445,10 @@ table th {
     text-align: center;
     justify-content: center;
   }
+}
+.react-calendar {
+  font-family: inherit;
+  border-color: #ccc;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
